--- a/src/compas_rcf/docker/compose_files/abb/abb-driver-docker-compose.yml
+++ b/src/compas_rcf/docker/compose_files/abb/abb-driver-docker-compose.yml
@@ -1,5 +1,21 @@
 version: '3.5'
 services:
+  ros-bridge:
+    image: gramaziokohler/compas_rrc_driver
+    container_name: ros-bridge-driver
+    environment:
+      - ROS_HOSTNAME=ros-bridge
+      - ROS_MASTER_URI=http://ros-master:11311
+    ports:
+      - "9090:9090"
+    depends_on:
+      - ros-master
+    command:
+      - roslaunch
+      - --wait
+      - rosbridge_server
+      - rosbridge_websocket.launch
+      - unregister_timeout:=28800      # This horribly long timeout of 8 hours is to workaround this issue: https://github.com/RobotWebTools/rosbridge_suite/issues/138
   abb-driver:
     image: gramaziokohler/compas_rrc_driver
     container_name: abb-driver
