--- a/src/compas_rcf/docker/compose_files/abb/abb-planner-moveit-conf-docker-compose.yml
+++ b/src/compas_rcf/docker/compose_files/abb/abb-planner-moveit-conf-docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: tetov/ros-abb-planner:19.11
     container_name: ros-bridge-ppl
     environment:
-      - "ROS_HOSTNAME=ros-bridge"
+      - "ROS_HOSTNAME=ros-bridge-ppl"
       - "ROS_MASTER_URI=http://ros-master:11311"
     ports:
       - "9091:9090"
